--- a/tab.html
+++ b/tab.html
@@ -1,4 +1,4 @@
-<!-- Tutorial link:  https://www.sitepoint.com/build-vue-chrome-extension/-->
+<!-- Tutorial link:  https://www.sitepoint.com/build-vue-chrome-extension/ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
