--- a/new-tab-page/src/popup/popup.html
+++ b/new-tab-page/src/popup/popup.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="popup.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Poppins|Russo+One&display=swap" rel="stylesheet">
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
   <% } %>
 </head>
 <body>
   <div id="app">
-
   </div>
   <script src="popup.js"></script>
 </body>
