--- a/new-tab-page/src/popup/popup.html
+++ b/new-tab-page/src/popup/popup.html
@@ -9,7 +9,7 @@
   <!-- Load some resources only in development environment -->
   <% } %>
 </head>
-<body>
+<body style = "margin: 0; padding:0;">
   <div id="app">
   </div>
   <script src="popup.js"></script>
