--- a/new-tab-page/src/tab/tab.html
+++ b/new-tab-page/src/tab/tab.html
@@ -5,8 +5,11 @@
   <title>New Tab Page</title>
   <link rel="stylesheet" href="tab.css">
 </head>
-<body>
-  <div id="app"></div>
+<body style = "margin: 0; padding:0;">
+    <img src = "../icons/backgrounds/your lie in april.jpg" alt = "poster" style = "position: absolute; top: 0; left: 0;  width: 100%; height: 100%;">
+  <div id="app">
+  </div>
+  
   <script src="tab.js"></script>
 </body>
 </html>
