added dynamic wallpaper

--- a/new-tab-page/src/tab/tab.html
+++ b/new-tab-page/src/tab/tab.html
@@ -6,10 +6,9 @@
   <link rel="stylesheet" href="tab.css">
 </head>
 <body style = "margin: 0; padding:0;">
-    <img src = "../icons/backgrounds/your lie in april.jpg" alt = "poster" style = "position: absolute; top: 0; left: 0;  width: 100%; height: 100%;">
+    <img id = "image" src = "" alt = "poster" style = "position: absolute; top: 0; left: 0;  width: 100%; height: 100%;">
   <div id="app">
   </div>
-  
   <script src="tab.js"></script>
 </body>
 </html>
