added google search

--- a/new-tab-page/src/tab/tab.html
+++ b/new-tab-page/src/tab/tab.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>New Tab Page</title>
   <link rel="stylesheet" href="tab.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style = "margin: 0; padding:0;">
     <img id = "image" src = "" alt = "poster" style = "position: absolute; top: 0; left: 0;  width: 100%; height: 100%;">
