--- a/new-tab-page/src/tab/tab.html
+++ b/new-tab-page/src/tab/tab.html
@@ -5,7 +5,7 @@
   <title>New Tab Page</title>
   <link rel="stylesheet" href="tab.css">
   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" rel = "stylesheet">
 </head>
 <body style = "margin: 0; padding:0;">
     <img id = "image" src = "" alt = "poster" style = "position: absolute; top: 0; left: 0;  width: 100%; height: 100%;">
